# zkhelios-infrastructure

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LAUNCH.md  README.md  SECURITY.md  SESSION-6-AUDIT.md  package.json  playwright.config.ts  pnpm-lock.yaml  turbo.json
.github/workflows/: anchor.yml  api.yml  ci.yml  deploy.yml
apps/api/: .env.example  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
apps/dapp/: .env.example  .eslintrc.json  API_CONTRACT.md  next.config.mjs  package.json  tailwind.config.ts  vitest.config.ts
apps/docs/: .env.example  next.config.mjs  package.json  tailwind.config.ts
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
docs/: threat-model.md
docs/runbooks/: disaster-recovery.md  incident-response.md  indexer-recovery.md  program-upgrade.md  scaling.md
infra/observability/: alerts.yml  prometheus.yml
infra/terraform/: README.md  main.tf  variables.tf
programs/zkhelios/: THREAT_MODEL.md
tests/e2e/: smoke.spec.ts
zkhelios/: Anchor.toml  Cargo.toml  README.md
zkhelios/programs/zkhelios/: Cargo.toml
zkhelios/programs/zkhelios/src/: constants.rs  error.rs  events.rs  instructions.rs  lib.rs  state.rs
zkhelios/programs/zkhelios/src/instructions/: admin_transfer.rs  create_user_account.rs  initialize.rs  register_circuit.rs  revoke_proof.rs  update_config.rs  verify_proof.rs
zkhelios/programs/zkhelios/src/zk/: groth16.rs
zkhelios/programs/zkhelios/tests/: zkhelios.rs
zkhelios/programs/zkhelios/tests/helpers/: mod.rs
zkhelios/scripts/: bootstrap-localnet.ts  (+1 more)
(+252 files in other folders)
