[package]
name = "zkhelios"
version = "0.1.0"
description = "zkHelios — on-chain Groth16 verifier for zero-knowledge proofs on Solana"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "zkhelios"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "1.1.2", features = ["init-if-needed"] }
solana-bn254 = "3.2.1"
solana-keccak-hasher = "3.1.0"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
# arkworks — generate a real Groth16/BN254 proof inside the happy-path test
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-relations = "0.4"
ark-serialize = "0.4"
ark-snark = "0.4"
ark-std = "0.4"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
